--- a/angular.json
+++ b/angular.json
@@ -26,15 +26,25 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
-            ],
+  {
+    "glob": "**/*",
+    "input": "public",  
+    "output": "/assets" 
+  },
+  {
+    "glob": "**/*",
+    "input": "src/assets", 
+    "output": "/assets"   
+  }
+],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -98,5 +108,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "a81d6d74-282a-495b-ae14-56ebe7f0cc86"
   }
 }
